Fix secondary nav spacing

--- a/css/plan.css
+++ b/css/plan.css
@@ -104,6 +104,8 @@ section.map > iframe { width:100%; height:calc(100vh - 70px); }
 
 nav.secondary > ul { margin-bottom:70px; }
 nav.secondary li { margin:0 20px; line-height:40px; }
+nav.secondary li ul li:first-child { margin-left:0px; }
+nav.secondary li ul li:last-child { margin-right:0px; }
 
 section.list > section { margin-bottom:40px; margin: 0 auto; }
 section.list > hr.mobileOnly { margin-bottom:70px; }
